--- a/Project1/index.html
+++ b/Project1/index.html
@@ -4,4 +4,32 @@
 <head>
   <meta charset="UTF-8">
   <title>Mortgage Calculator</title>
+  <link rel "stylesheet" href="./style.css">
+  <style>
+
+  </style>
 </head>
+
+
+<body>
+    
+    <div id="Mortgage-Box">
+        <div id="Calculator">Your Personal Calculator</div>
+        <div id="Payments"> Monthly Payments</div>
+        <div id="Income">Yearly Income</div>
+        <div id="Amount">Mortgage Amount</div>
+        <div id="Term">Mortgage term</div>
+        <div id="Interest">Interest Rate</div>
+        <button>Calculate</button>
+
+    </div>
+
+    <div id="Results">
+        <div id="Customized">Customized Results</div>
+        <p>Given the information that was provided by you, <br> we were able to calculate your monthly payment and total mortgage payment <br> </p>
+
+
+    </div>
+
+<script src="script.js"></script>
+</body>
