--- a/Project1/index.html
+++ b/Project1/index.html
@@ -19,7 +19,7 @@
         <div id="Income">Yearly Income</div>
         <div id="Amount">Mortgage Amount</div>
         <div id="Term">Mortgage term</div>
-        <div id="Interest">Interest Rate</div>
+        <div id="interestRate">Interest Rate</div>
         <button>Calculate</button>
 
     </div>
