--- a/Project1/index.html
+++ b/Project1/index.html
@@ -18,7 +18,7 @@
         <div id="Payments"> Monthly Payments</div>
         <div id="Income">Yearly Income</div>
         <div id="Amount">Mortgage Amount</div>
-        <div id="Term">Mortgage term</div>
+        <div id="mortgageTerm">Mortgage term</div>
         <div id="interestRate">Interest Rate</div>
         <button>Calculate</button>
 
