--- a/Project1/index.html
+++ b/Project1/index.html
@@ -17,7 +17,7 @@
         <div id="Calculator">Your Personal Calculator</div>
         <div id="Payments"> Monthly Payments</div>
         <div id="Income">Yearly Income</div>
-        <div id="Amount">Mortgage Amount</div>
+        <div id="downPayment">Mortgage Amount</div>
         <div id="mortgageTerm">Mortgage term</div>
         <div id="interestRate">Interest Rate</div>
         <button>Calculate</button>
