--- a/Project1/index.html
+++ b/Project1/index.html
@@ -15,7 +15,7 @@
     
     <div id="Mortgage-Box">
         <div id="Calculator">Your Personal Calculator</div>
-        <div id="Payments"> Monthly Payments</div>
+        <div id="monthlyPayment"> Monthly Payments</div>
         <div id="Income">Yearly Income</div>
         <div id="downPayment">Mortgage Amount</div>
         <div id="mortgageTerm">Mortgage term</div>
