--- a/results.html
+++ b/results.html
@@ -31,6 +31,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <!-- Custom JS -->
-    <script src="Assets/JS/results.js"></script>
+    <script src="./assets/JS/results.js"></script>
 </body>
 </html>
