--- a/results.html
+++ b/results.html
@@ -17,12 +17,12 @@
                 <div id="resultDetails" class="mb-3">Here are your mortgage details:</div>
                 <div id="Customized" class="mb-2">Monthly Payment:</div>
                 <div id="monthlyPayment" class="font-weight-bold mb-2"></div>
-                <div id="totalPrincipal" class="font-weight-bold mb-2">Total Principal:</div>
-                <div id="totalPrincipal" class="font-weight-bold mb-2"></div>
-                <div id="totalInterest" class="font-weight-bold mb-2">Total Interest:</div>
-                <div id="totalInterest" class="font-weight-bold mb-2"></div>
-                <div id="totalAmount" class="font-weight-bold mb-2">Total Amount:</div>
-                <div id="totalAmount" class="font-weight-bold"></div>
+                <div id="totalPrincipalLabel" class="font-weight-bold mb-2">Total Principal:</div>
+                <div id="totalPrincipalValue" class="font-weight-bold mb-2"></div>
+                <div id="totalInterestLabel" class="font-weight-bold mb-2">Total Interest:</div>
+                <div id="totalInterestValue" class="font-weight-bold mb-2"></div>
+                <div id="totalAmountLabel" class="font-weight-bold mb-2">Total Amount:</div>
+                <div id="totalAmountValue" class="font-weight-bold"></div>
             </div>
         </div>
     </div>
